--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ Fonts:
 */
 
 :root {
-	--primary-color: #ff6b6b;
-	--secondary-color: #794afa;
-	--secondary-dark-color: #453c5c;
+	--primary-color: #969090;
+	--secondary-color: #4f4d50;
+	--secondary-dark-color: #4f4d50;
 
 	--white-color: #fff;
 	--light-bg-color: #f2f3f5;
